--- a/requirements.txt
+++ b/requirements.txt
@@ -1,127 +1,30 @@
-acres==0.3.0
-aiofiles==24.1.0
-amqp==5.3.1
-anyio==4.9.0
 asgiref==3.8.1
-async-timeout==5.0.1
-babel==2.17.0
-beautifulsoup4==4.12.3
-billiard==4.2.1
-celery==5.4.0
-certifi==2024.8.30
+Brotli==1.1.0
+cffi==1.17.1
 chardet==5.2.0
-charset-normalizer==3.4.0
-ci-info==0.3.0
-click==8.1.7
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-cobble==0.1.4
-colorama==0.4.6
-configobj==5.0.9
-configparser==7.2.0
-cron-descriptor==1.4.5
-distlib==0.3.9
+cssselect2==0.8.0
 dj-database-url==2.3.0
-Django==5.1.2
-django-celery-beat==2.7.0
-django-sequences==3.0
-django-timezone-field==7.0
-djangorestframework==3.15.2
-docopt==0.6.2
-docx2pdf==0.1.8
-docxcompose==1.4.0
-docxtpl==0.19.1
-easyocr==1.7.2
+Django==5.1.7
+django-mathfilters==1.0.0
+django-sslserver==0.22
 et_xmlfile==2.0.0
-etelemetry==0.3.1
-exceptiongroup==1.2.2
-filelock==3.17.0
-fitz==0.0.1.dev2
-frontend==0.0.3
-fsspec==2024.12.0
-gunicorn==20.1.0
-h11==0.14.0
-httplib2==0.22.0
-idna==3.10
-imageio==2.37.0
-importlib_resources==6.5.2
-instaloader==4.14
-isodate==0.6.1
-itsdangerous==2.2.0
-Jinja2==3.1.5
-Js2Py==0.74
-kombu==5.4.2
-lazy_loader==0.4
-looseversion==1.3.0
-lxml==5.3.0
-mammoth==1.9.0
-MarkupSafe==3.0.2
-mpmath==1.3.0
-networkx==3.4.2
-nibabel==5.3.2
-ninja==1.11.1.3
-nipype==1.10.0
-numpy==2.2.1
-opencv-python-headless==4.11.0.86
+fonttools==4.57.0
+gunicorn==23.0.0
 openpyxl==3.1.5
-packaging==24.1
-pandas==2.2.3
-pathlib==1.0.1
-pdfkit==1.0.0
-pdfrw==0.4
+packaging==24.2
 pillow==11.1.0
-pipwin==0.5.2
-platformdirs==4.3.6
-prompt_toolkit==3.0.48
-prov==2.0.1
-psycopg==3.2.3
-psycopg2==2.9.10
 psycopg2-binary==2.9.10
-puremagic==1.28
-pyclipper==1.3.0.post6
-pydot==3.0.4
-pyjsparser==2.7.1
-PyMuPDF==1.25.5
-pyparsing==3.2.3
-PyPrind==2.11.3
-pySmartDL==1.3.4
-pytesseract==0.3.13
-python-bidi==0.6.3
-python-crontab==3.2.0
-python-dateutil==2.9.0.post0
-python-docx==1.1.2
-python-dotenv==1.0.1
-pytz==2024.2
-pywin32==308
-pyxnat==1.6.3
-PyYAML==6.0.2
-rdflib==6.3.2
-redis==5.2.0
-reportlab==4.3.1
-requests==2.32.3
-scikit-image==0.25.1
-scipy==1.15.1
-shapely==2.0.6
-simplejson==3.20.1
-six==1.16.0
-sniffio==1.3.1
-soupsieve==2.6
-sqlparse==0.5.1
-starlette==0.46.1
-sympy==1.13.1
-tifffile==2025.1.10
-torch==2.5.1
-torchvision==0.20.1
-tqdm==4.67.1
-traits==7.0.2
-typing_extensions==4.12.2
-tzdata==2024.2
-tzlocal==5.2
-urllib3==2.2.3
-uvicorn==0.34.0
-vine==5.1.0
-virtualenv==20.29.3
-wcwidth==0.2.13
-whitenoise==6.8.2
-XlsxWriter==3.2.0
+pycparser==2.22
+pydyf==0.11.0
+pyphen==0.17.2
+python-barcode==0.15.1
+reportlab==4.4.0
+sqlparse==0.5.3
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+typing_extensions==4.13.2
+tzdata==2025.1
+weasyprint==65.1
+webencodings==0.5.1
+whitenoise==6.9.0
+zopfli==0.2.3.post1
